Added description and footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="canonical" href="{{ canonical }}">
   {% assign feed_path = "/feed.xml" %}
   {% if site.feed and site.feed.path %}
