added social links to top; played around with css

--- a/_sass/whiteglass/_layout.scss
+++ b/_sass/whiteglass/_layout.scss
@@ -14,12 +14,29 @@
   line-height: 56px;
   letter-spacing: -1px;
   margin-bottom: 0;
+	margin-right: 20px;
   float: left;
 
   &,
   &:visited {
     color: $grey-color-dark;
   }
+}
+.site-title-social {
+	font-size:14px;
+  line-height: 56px;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+	margin-right: 10px;
+  float: left;
+  width: -webkit-calc(40% - (#{$spacing-unit} / 2));
+  width:         calc(40% - (#{$spacing-unit} / 2));
+}
+
+@include media-query($on-palm) {
+	.site-title-social {
+		display: none;
+	}
 }
 
 .site-nav {
@@ -64,11 +81,10 @@
 .contact-list,
 .social-media-list {
   list-style: none;
-  margin-left: 0;
+  margin: 0;
 }
 
 .footer-col-wrapper {
-  // @include relative-font-size(0.9375);
   color: $grey-color;
   margin-left: -$spacing-unit / 2;
   @extend %clearfix;
@@ -81,49 +97,45 @@
 }
 
 .footer-col-1 {
-  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-  width:         calc(45% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+  width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
-.footer-col-1 .links a {
+.social-links a {
+	// margin: 0px;
+	list-style: none;
 	display: inline-block;
 	font-size: 1.5em;
-	// width: 100%;
-	color: black;
+	color: $grey-color;
 	opacity: 0.65;
-	padding: 0 2% 0 2%;
+	padding: 0 10px 0 10px;
 }
 
-.footer-col-1 .links a:hover {
+.social-links a:hover {
 	opacity: 0.45;
 }
 
-// .footer-col-2 {
-//   width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-//   width:         calc(20% - (#{$spacing-unit} / 2));
-// }
-
 .footer-col-3 {
-  width: -webkit-calc(55% - (#{$spacing-unit} / 2));
-  width:         calc(55% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+  width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .footer-attribution {
   text-align: center;
 }
 
-@include media-query($on-laptop) {
-  .footer-col-1,
-  .footer-col-2 {
-    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-    width:         calc(50% - (#{$spacing-unit} / 2));
-  }
-
-  .footer-col-3 {
-    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-    width:         calc(100% - (#{$spacing-unit} / 2));
-  }
-}
+// @include media-query($on-laptop) {
+//   .footer-col-1,
+//   .footer-col-2 {
+//     width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+//     width:         calc(50% - (#{$spacing-unit} / 2));
+//   }
+//
+//   .footer-col-3 {
+//     width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+//     width:         calc(100% - (#{$spacing-unit} / 2));
+//   }
+// }
 
 @include media-query($on-palm) {
   .footer-col {
