--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,49 +9,14 @@
 				<ul class="contact-list">
 					<li>
 						{% if site.author %}
-						{{ site.author | escape }}
+						&copy; {{ site.author | escape }}
 						{% else %}
 						{{ site.title | escape }}
 						{% endif %}
 					</li>
-					<li class="links">
-						{% if site.email %}
-						<a href="mailto:{{ site.email }}"><i class="fa fa-envelope-o"></i></a>
-						{% endif %}
-						{% if site.twitter_username %}
-						<a href="https://twitter.com/{{ site.twitter_username }}">
-							<i class="fa fa-twitter"></i>
-						</a>
-						{% endif %}
-						{% if site.github_username %}
-						<a href="https://github.com/{{ site.github_username }}">
-							<i class="fa fa-github"></i>
-						</a>
-						{% endif %}
-						{% if site.linkedin_username %}
-						<a href="https://linkedin.com/in/{{ site.linkedin_username }}">
-							<i class="fa fa-linkedin"></i>
-						</a>
-						{% endif %}
-					</li>
+					{% include social_links.html %}
 				</ul>
 			</div>
-
-			<!-- <div class="footer&#45;col footer&#45;col&#45;2"> -->
-			<!-- 	<ul class="social&#45;media&#45;list"> -->
-			<!-- 		{% if site.github_username %} -->
-			<!-- 		<li> -->
-			<!-- 			Github -->
-			<!-- 		</li> -->
-			<!-- 		{% endif %} -->
-      <!--  -->
-			<!-- 		{% if site.twitter_username %} -->
-			<!-- 		<li> -->
-			<!-- 			Twitter -->
-			<!-- 		</li> -->
-			<!-- 		{% endif %} -->
-			<!-- 	</ul> -->
-			<!-- </div> -->
 
 			<div class="footer-col footer-col-3">
 				<p>{{ site.description | escape }}</p>
