--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,12 @@
 
     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
+		<div class="site-title-social">
+			<ul class="contact-list">
+				{% include social_links.html %}
+			</ul>
+		</div>
+
     <nav class="site-nav">
       {% for link in site.data.navigation.main %}
         {% if link.url contains "http" %}
