moved rss feed to fa icon

--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -17,4 +17,5 @@
 	{% if site.email %}
 	<a href="mailto:{{ site.email }}"><i class="fa fa-envelope-o"></i></a>
 	{% endif %}
+	<a href="{{ feed_path | absolute_url }}"><i class="fa fa-rss"></i></a>
 </li>
