Added mailchimp newsletter signup via modal

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,17 @@
       {% endfor %}
     </nav>
 
+    <!-- The Modal -->
+    <div id="mailchimpModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        {% include mailchimp.html %}
+      </div>
+
+    </div>
+
   </div>
 
 </header>
