--- a/_sass/whiteglass/_base.scss
+++ b/_sass/whiteglass/_base.scss
@@ -199,3 +199,85 @@ pre {
   display: table;
   clear: both;
 }
+
+/**
+ * Modals
+ */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px; /* Could be more or less, depending on screen size */
+
+    h2 {
+      margin-top: 10px;
+    }
+}
+
+/* The Close Button */
+.close {
+  float: right;
+	font-size: 2em;
+	color: $grey-color;
+	opacity: 0.65;
+}
+
+.close:hover,
+.close:focus {
+  opacity: 0.45;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mc-field-group {
+  vertical-align: center;
+  padding: auto;
+  margin: auto;
+  input {
+    margin-bottom: 7px;
+    font-size: 0.9em;
+  }
+}
+
+#mc-embedded-subscribe {
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-feature-settings: "kern" 1;
+     -moz-font-feature-settings: "kern" 1;
+       -o-font-feature-settings: "kern" 1;
+          font-feature-settings: "kern" 1;
+  font-kerning: normal;
+  border: none;
+  padding: 8px 15px;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 15px;
+  margin-bottom: 10px;
+
+  &,
+  &:visited {
+    color: $grey-color;
+    background-color: $grey-color-light;
+  }
+
+  &:hover {
+    color: white;
+    background-color: $brand-color;
+  }
+}
